# brandvoice-studio

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: deploy.md  overview.md
tests/: test_app.py
