[tool.poetry]
name = "brandvoice-studio"
version = "0.1.0"
description = "BrandVoice Studio — local TTS voiceover app (Streamlit + Chatterbox TTS)"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.black]
line-length = 88
target-version = ['py311']

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
